--- a/index.html
+++ b/index.html
@@ -1,2 +1,33 @@
-<h1 id ="title">Survey Form</h1>
-<p id="description"></p>
+<html>
+    <head>
+        
+    </head>
+    <body>
+        <h1 id ="title">Survey Form</h1>
+        <p id="description">lgfnisfgikfbgdhsfig</p>
+
+        <form id="survey-form">
+            <label id="name-label">Name</label>
+            <input id="name" type="text" placeholder="Enter your name" required>
+            <br>
+            <label id="email-label">Email</label>
+            <input id="email" type="email" placeholder="Enter your email-id" required>
+            <br>
+            <label id="number-label">Number</label>
+            <input id="number" type="number" placeholder="Number" min="0" max="100">
+            <br>
+
+            <label for="cars">Choose a car:</label>
+                <select name="cars" id="dropdown">
+                <option value="volvo">Volvo</option>
+                <option value="saab">Saab</option>
+                <option value="mercedes">Mercedes</option>
+                <option value="audi">Audi</option>
+                </select>
+            <br>
+            <input type="submit" value="Submit">
+        </form>
+    </body>
+
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+</html>
