Survey Form Completed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1 id ="title">Survey Form</h1>
@@ -25,7 +25,23 @@
                 <option value="audi">Audi</option>
                 </select>
             <br>
-            <input type="submit" value="Submit">
+            <label for="">
+                <input id="" type="radio" name="radio" value="dfdf">yufgkj</label>
+            <label for="">
+                <input id="" type="radio" name="radio" value="fdgvv">khgfjkbkjf</label>
+            <label for="">
+                <input id="" type="radio" name="radio" value="gededfgve">kjdfhgbklf</label>
+            <br>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1"> I have a bike</label><br>
+            <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+            <label for="vehicle2"> I have a car</label><br>
+            <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+            <label for="vehicle3"> I have a boat</label>
+            <br>
+            <textarea name="comment" form="usrform"></textarea>   
+            <br>
+            <input id="submit" type="submit" value="Submit">
         </form>
     </body>
 
