--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Survey_Form">
+        <meta name="keywords" content="HTML, CSS">
+        <meta name="author" content="Faris">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
